--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -12,28 +12,33 @@
   <% end %>
 
   <div>
+    <%= form.hidden_field :trainer_id, value: current_user.id, style: "display: block" %>
+  </div>
+
+  <div>
+    <%= form.hidden_field :duration, value: 60, style: "display: block" %>
+  </div>
+
+  <div>
     <%= form.label :day_of_week, style: "display: block" %>
-    <%= form.text_field :day_of_week %>
+    <%= form.select :day_of_week, options_for_select((0..6).map { |n| [Date::DAYNAMES[n], Date::DAYNAMES[n]]}) %>
   </div>
 
   <div>
     <%= form.label :start_time, style: "display: block" %>
-    <%= form.datetime_field :start_time %>
+    <%= form.hidden_field :start_time, value: Time.new(Date.today.year, Date.today.month, Date.today.day, 7,0,0)%>
+  </div>
+  <div>
+    <%=  Time.new(Date.today.year, Date.today.month, Date.today.day, 7,0,0).strftime("%I:%M %p")%>
   </div>
 
   <div>
     <%= form.label :end_time, style: "display: block" %>
-    <%= form.datetime_field :end_time %>
+    <%= form.hidden_field :end_time, value: Time.new(Date.today.year, Date.today.month, Date.today.day, 18,0,0)%>
   </div>
 
   <div>
-    <%= form.label :duration, style: "display: block" %>
-    <%= form.number_field :duration %>
-  </div>
-
-  <div>
-    <%= form.label :trainer_id, style: "display: block" %>
-    <%= form.text_field :trainer_id %>
+    <%=  Time.new(Date.today.year, Date.today.month, Date.today.day, 18,0,0).strftime("%I:%M %p")%>
   </div>
 
   <div>
