--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -1,27 +1,16 @@
 <div id="<%= dom_id schedule %>">
   <p>
-    <strong>Day of week:</strong>
+    <strong>Availability:</strong>
     <%= schedule.day_of_week %>
   </p>
 
   <p>
     <strong>Start time:</strong>
-    <%= schedule.start_time %>
+    <%= schedule.start_time.strftime('%I:%M %p') %>
   </p>
 
   <p>
     <strong>End time:</strong>
-    <%= schedule.end_time %>
+    <%= schedule.end_time.strftime('%I:%M %p') %>
   </p>
-
-  <p>
-    <strong>Duration:</strong>
-    <%= schedule.duration %>
-  </p>
-
-  <p>
-    <strong>Trainer:</strong>
-    <%= schedule.trainer_id %>
-  </p>
-
 </div>
