--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,22 +1,17 @@
 <div id="<%= dom_id booking %>">
   <p>
+    <strong>Trainer:</strong>
+    <%= booking.trainer.first_name %> <%= booking.trainer.last_name %>
+  </p>
+
+  <p>
     <strong>Started at:</strong>
-    <%= booking.started_at %>
+    <%= booking.started_at.strftime("%m/%d/%Y - %I:%M %p") %>
   </p>
 
   <p>
     <strong>Ended at:</strong>
-    <%= booking.ended_at %>
-  </p>
-
-  <p>
-    <strong>Client:</strong>
-    <%= booking.client_id %>
-  </p>
-
-  <p>
-    <strong>Trainer:</strong>
-    <%= booking.trainer_id %>
+    <%= booking.ended_at.strftime("%m/%d/%Y - %I:%M %p") %>
   </p>
 
 </div>
