--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New schedule</h1>
+<h1>1 hour booking: </h1>
 
-<%= render "form", schedule: @schedule %>
+<%= render "form", booking: @booking, date: @date, trainers_array: @trainers_array %>
 
 <br>
 
 <div>
-  <%= link_to "Back to schedules", schedules_path %>
+  <%= link_to "Back to bookings", bookings_path %>
 </div>
