--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,16 +4,21 @@
   justify-content: space-between;
   align-items: center;
   background-color: #37383d;
-  height: 9.6rem;
+  height: 5.0rem;
   padding: 0 4.8rem;
 }
 
 /* NAVIGATION */
+.main-nav-logo {
+  color: fff; 
+}
+
 .main-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
   gap: 3.2rem;
+  padding: 1rem 0 0 0;
 }
 
 .main-nav-link:link,
@@ -21,8 +26,8 @@
   display: inline-block;
   text-decoration: none;
   color: #fff;
-  font-weight: 500;
-  font-size: 1.8rem;
+  font-weight: 350;
+  font-size: 1.4rem;
   transition: all 0.3s;
 }
 
