--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,49 +1,44 @@
-<% if user_signed_in? %>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <div class="container">
-      <%= link_to "Calendar", root_path, class: "navbar-brand" %>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <% if user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to schedules_path, class: "nav-link" do %>
-                <i class="fa-solid fa-clock"></i></i>
-              Schedule
-            <% end %>
-          </li>
-          <li class="nav-item">
-            <%= link_to bookings_path, class: "nav-link" do %>
-              <i class="fa-regular fa-calendar-days"></i>
-              Booking Sessions
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-    <ul class="navbar-nav">
+<header class="header">
+  <% if user_signed_in? %>
+  <%= link_to "3E Fitness", bookings_path, class: "main-nav-link"%>
+  <% else %>
+  <h1 class="main-nav-link" style="color: #fff;">
+    3E Fitness
+  </h1>
+  <% end%>
+  
+  <nav>
+    <ul class="main-nav-list">
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to edit_user_registration_path, class: "nav-link" do %>
-            <i class="fa-solid fa-circle-user"></i>
-            <%= current_user.first_name %> (<%= current_user.role == "clients" ? "Client" : "Trainer" %>)
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign in", new_user_session_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-</div>
+        <li>
+          <%= link_to schedules_path, class: "main-nav-link" do %>
+            <i class="fa-solid fa-clock"></i></i>
+          Schedule
+        <% end %>
+      </li>
+      <li>
+        <%= link_to bookings_path, class: "main-nav-link" do %>
+          <i class="fa-regular fa-calendar-days"></i>
+          Booking Sessions
+        <% end %>
+      </li>
+      <li>
+        <%= link_to edit_user_registration_path, class: "main-nav-link" do %>
+          <i class="fa-solid fa-circle-user"></i>
+          <%= current_user.first_name %> (<%= current_user.role == "clients" ? "Client" : "Trainer" %>)
+        <% end %>
+      </li>
+      <li>
+        <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "main-nav-link" %>
+      </li>
+    <% else%>
+      <li>
+        <%= link_to "Sign in", new_user_session_path, class: "main-nav-link" %>
+      </li>
+      <li>
+        <%= link_to "Sign up", new_user_registration_path, class: "main-nav-link" %>
+      </li>
+    <% end %>
+  </ul>
 </nav>
-<% end%>
+</header>
