--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New schedule</h1>
 
-<%= render "form", schedule: @schedule %>
+<%= render "form", schedule: @schedule, availabilities: @availabilities %>
 
 <br>
 
