--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,6 @@
-<h1>New booking</h1>
+<h1>60 Minute PT Session: </h1>
 
 <%= render "form", booking: @booking %>
-
-<br>
 
 <div>
   <%= link_to "Back to bookings", bookings_path %>
