reformated time to HH:MM. I made it work Thierry!

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -20,7 +20,12 @@
     })
 
     const options = filteredData.map(function(hash) {
-      return hash.started_at;
+        const startedAt = new Date(hash.started_at);
+        const hoursUTC = startedAt.getUTCHours();
+        const minutesUTC = startedAt.getUTCMinutes();
+        const period = hoursUTC < 12 ? 'AM' : 'PM';
+        const formattedTime = (hoursUTC % 12 || 12).toString().padStart(2, '0') + ':' + minutesUTC.toString().padStart(2, '0') + ' ' + period;
+        return formattedTime;
     })
 
     timeSlots.innerHTML = "";
