--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -13,4 +13,8 @@
     <strong>End time:</strong>
     <%= schedule.end_time.strftime('%I:%M %p') %>
   </p>
+
+  <p>
+    <%= link_to "Show this schedule", schedule %>
+  </p>
 </div>
