--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,7 +10,7 @@
 
 /* NAVIGATION */
 .main-nav-logo {
-  color: fff; 
+  color: #fff; 
 }
 
 .main-nav-list {
@@ -69,6 +69,7 @@
   font-size: 1.7rem;
   line-height: 1.6;
   margin-bottom: 4.8rem;
+  color: #fff;
 }
 
 /* TRAINERS SECTION */
@@ -153,6 +154,7 @@
 }
 
 .section-header {
+  color: #fff;
   font-size: 4rem;
   line-height: 1.3;
   font-weight: 500;
