--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,40 +1,39 @@
-<%= form_with(model: schedule) do |form| %>
+<%= form_with(model: schedule, html: { class: "form" }) do |form| %>
   <% if schedule.errors.any? %>
-    <div style="color: red">
+    <div class="alert alert-danger">
       <h2><%= pluralize(schedule.errors.count, "error") %> prohibited this schedule from being saved:</h2>
-
       <ul>
-        <% schedule.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% schedule.errors.full_messages.each do |error| %>
+          <li><%= error %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div>
-    <%= form.hidden_field :trainer_id, value: current_user.id, style: "display: block" %>
+  <div class="form-group">
+    <%= form.hidden_field :trainer_id, value: current_user.id %>
   </div>
 
-  <div>
-    <%= form.hidden_field :duration, value: 60, style: "display: block" %>
+  <div class="form-group">
+    <%= form.hidden_field :duration, value: 60 %>
   </div>
 
-  <div>
-    <%= form.label :day_of_week, style: "display: block" %>
-    <%= form.select :day_of_week, options_for_select((0..6).map { |n| [Date::DAYNAMES[n], Date::DAYNAMES[n]]}) %>
+  <div class="form-group">
+    <%= form.label :day_of_week %>
+    <%= form.select :day_of_week, options_for_select((0..6).map { |n| [Date::DAYNAMES[n], Date::DAYNAMES[n]] }), {include_blank: true}, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.label :start_time, style: "display: block" %>
-    <%= form.select :start_time, options_for_select(availabilities)%>
+  <div class="form-group">
+    <%= form.label :start_time %>
+    <%= form.select :start_time, options_for_select(availabilities), {include_blank: true}, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.label :end_time, style: "display: block" %>
-    <%= form.select :end_time, options_for_select(availabilities)%>
+  <div class="form-group">
+    <%= form.label :end_time %>
+    <%= form.select :end_time, options_for_select(availabilities), {include_blank: true}, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="form-group text-center mt-3">
+    <%= form.submit "Save", class: "btn btn-success" %>
   </div>
 <% end %>
