--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,16 +1,15 @@
-<div id="schedules">
-  <h1>My Schedule: </h1>
-
+<div class="container mt-4">
   <div>
-    <%= link_to "Create Schedule", new_schedule_path, class: "btn btn-warning" %>
+    <h1>My Schedule: </h1>
+    <%= link_to "New Schedule", new_schedule_path, class: "btn btn-success" %>
   </div>
 
-  <hr>
-  <% current_user.trainer_schedules.each do |schedule| %>
-    <%= render schedule %>
-    <p>
-      <%= link_to "Show this schedule", schedule %>
-    </p>
-    <hr>
-  <% end %>
+  <div class="row row-cols-4 mt-4 gap-3">
+    <% current_user.trainer_schedules.each do |schedule| %>
+      <div class="card p-3">
+        <%= render schedule %>
+      </div>
+    <% end %>
+  </div>
 </div>
+
