--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -34,6 +34,6 @@
   </div>
 
   <div class="form-group text-center mt-3">
-    <%= form.submit "Save", class: "btn btn-success" %>
+    <%= form.submit "Save", class: "btn btn-success btn-lg" %>
   </div>
 <% end %>
