--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,18 +10,21 @@
   <nav>
     <ul class="main-nav-list">
       <% if user_signed_in? %>
-        <li>
-          <%= link_to schedules_path, class: "main-nav-link" do %>
-            <i class="fa-solid fa-clock"></i></i>
-          Schedule
-        <% end %>
-      </li>
-      <li>
-        <%= link_to bookings_path, class: "main-nav-link" do %>
-          <i class="fa-regular fa-calendar-days"></i>
-          Booking Sessions
-        <% end %>
-      </li>
+        <% if current_user.role == "clients" %>
+          <li>
+            <%= link_to bookings_path, class: "main-nav-link" do %>
+              <i class="fa-regular fa-calendar-days"></i>
+              Booking Sessions
+            <% end %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to schedules_path, class: "main-nav-link" do %>
+              <i class="fa-solid fa-clock"></i></i>
+            Schedule
+          <% end %>
+        </li>
+      <% end %>
       <li>
         <%= link_to edit_user_registration_path, class: "main-nav-link" do %>
           <i class="fa-solid fa-circle-user"></i>
@@ -29,16 +32,19 @@
         <% end %>
       </li>
       <li>
-        <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "main-nav-link" %>
-      </li>
-    <% else%>
-      <li>
-        <%= link_to "Sign in", new_user_session_path, class: "main-nav-link" %>
-      </li>
-      <li>
-        <%= link_to "Sign up", new_user_registration_path, class: "main-nav-link" %>
-      </li>
-    <% end %>
-  </ul>
+        <%= link_to destroy_user_session_path, data: { turbo_method: :delete }, class: "main-nav-link" do %>
+          <i class="fa-solid fa-arrow-right-from-bracket"></i></i>
+        Sign out
+      <% end %>
+    </li>
+  <% else%>
+    <li>
+      <%= link_to "Sign in", new_user_session_path, class: "main-nav-link" %>
+    </li>
+    <li>
+      <%= link_to "Sign up", new_user_registration_path, class: "main-nav-link" %>
+    </li>
+  <% end %>
+</ul>
 </nav>
 </header>
