--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -20,17 +20,17 @@
 
   <div class="form-group">
     <%= form.label :day_of_week %>
-    <%= form.select :day_of_week, options_for_select((0..6).map { |n| [Date::DAYNAMES[n], Date::DAYNAMES[n]] }), {include_blank: true}, class: "form-control" %>
+    <%= form.select :day_of_week, options_for_select((0..6).map { |n| [Date::DAYNAMES[n], Date::DAYNAMES[n]] }), {include_blank: false}, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= form.label :start_time %>
-    <%= form.select :start_time, options_for_select(availabilities), {include_blank: true}, class: "form-control" %>
+    <%= form.select :start_time, options_for_select(availabilities), {include_blank: false}, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= form.label :end_time %>
-    <%= form.select :end_time, options_for_select(availabilities), {include_blank: true}, class: "form-control" %>
+    <%= form.select :end_time, options_for_select(availabilities), {include_blank: false}, class: "form-control" %>
   </div>
 
   <div class="form-group text-center mt-3">
