--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -13,7 +13,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">
-            <%= link_to booking.trainer.image, booking %>
+            <%= link_to "Personal Training", booking %>
           </h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">
             with <%= booking.trainer.first_name %>
