--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,12 +10,21 @@
       <% bookings.each do |booking| %>
         <div class="card mt-2">
           <div class="card-body">
-            <h5 class="card-title">
-              <%= link_to "Personal Training", booking %>
-            </h5>
-            <h6 class="card-subtitle mb-2">
-              with <%= booking.trainer.first_name %>
-            </h6>
+            <% if current_user.role == "clients" %>
+              <h5 class="card-title">
+                <%= link_to "Personal Training", booking %>
+              </h5>
+              <h6 class="card-subtitle mb-2">
+                with <%= booking.trainer.first_name %>
+              </h6>
+            <% else %>
+              <h5 class="card-title">
+                <%= link_to "Client Session", booking %>
+              </h5>
+              <h6>
+                with <%= booking.client.first_name %>
+              </h6>
+            <% end %>
             <p class="card-text">Start time: <%= booking.started_at.strftime("%I:%M %p") %></p>
             <p class="card-text">End time: <%= booking.ended_at.strftime("%I:%M %p") %></p>
           </div>
