--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,6 +24,12 @@
             Schedule
           <% end %>
         </li>
+        <li>
+          <%= link_to bookings_path, class: "main-nav-link" do %>
+            <i class="fa-regular fa-calendar-days"></i>
+            Booking Sessions
+          <% end %>
+        </li>
       <% end %>
       <li>
         <%= link_to edit_user_registration_path, class: "main-nav-link" do %>
