--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing schedule</h1>
-
-<%= render "form", schedule: @schedule %>
-
-<br>
-
-<div>
-  <%= link_to "Show this schedule", @schedule %> |
-  <%= link_to "Back to schedules", schedules_path %>
+<div class="container mt-custom">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="text-center">
+        <h1>Edit Schedule</h1>
+      </div>
+      <%= render "form", schedule: @schedule, availabilities: @availabilities %>
+      <div class="text-center mt-3">
+        <%= link_to "Back to schedules", schedules_path, class: "btn btn-secondary d-block mx-auto" %> 
+      </div>
+    </div>
+  </div>
 </div>
+
