--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,10 +1,16 @@
-<h1>Editing booking</h1>
+<div class="container d-flex justify-content-center align-items-start vh-100 mt-custom">
+  <div>
+    <div class="text-center">
+      <h1>Reschedule Session</h1>
+    </div>
 
-<%= render "form", booking: @booking %>
+    <div>
+      <p class="text-center">Date: <%= @date.strftime("%B %d, %Y") %></p>
+    </div>
 
-<br>
-
-<div>
-  <%= link_to "Show this booking", @booking %> |
-  <%= link_to "Back to bookings", bookings_path %>
+    <div>
+      <%= render "form", booking: @booking %>
+      <a href="<%= bookings_path %>" class="btn btn-secondary d-block mx-auto mt-3">Back to bookings</a>
+    </div>
+  </div>
 </div>
