--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -130,7 +130,7 @@ strong {
 
 .three-e-card-body {
   border-radius: 30px;
-  font-size: 18px; 
+  font-size: 18px;
 }
 
 .card:hover {
@@ -144,4 +144,12 @@ strong {
 
 .mr-custom {
   margin-right: 10px;
+}
+
+.flash-messages {
+  position: relative;
+  margin-top: 20px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
