--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,15 @@
   </head>
 
   <body>
-    <% if notice.present? %>
-      <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
-    <% end %>
-    <% if alert.present? %>
-      <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
-    <% end %>
     <%= render "shared/navbar" %>
+    <div class="flash-messages">
+      <% if notice.present? %>
+        <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
+      <% end %>
+      <% if alert.present? %>
+        <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
- </html>
+</html>
