--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,50 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container edit-container">
+  <div class="row justify-content-center">
+    <div class="col-md-6 col-lg-4">
+      <div class="edit-form">
+        <h2 class="text-center text-success mb-4">Edit Profile</h2>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "form"}) do |f| %>
+          <div class="text-danger">
+            <%= f.error_notification %>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :first_name, label: "First Name", input_html: { class: 'form-control', autocomplete: "given-name" } %>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :last_name, label: "Last Name", input_html: { class: 'form-control', autocomplete: "family-name" } %>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :phone_number, label: "Phone Number", input_html: { class: 'form-control', autocomplete: "tel" } %>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :email,
+                label: "Email",
+                autofocus: true,
+                input_html: { class: "form-control", autocomplete: "email" }%>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :password,
+                label: "New Password",
+                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                input_html: { class: "form-control", autocomplete: "new-password" } %>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :password_confirmation,
+                label: "Confirm New Password",
+                input_html: { class: "form-control", autocomplete: "new-password" } %>
+          </div>
+          <div class="form-group mb-3">
+            <%= f.input :current_password,
+            input_html: { class: "form-control", autocomplete: "current-password" } %>
+            <small class="text-danger">We need your current password to confirm your changes</small>
+          </div>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+          <%= f.button :submit, "Update Profile", class: "btn btn-success btn-block" %>
+        <% end %>
+        <div class="mt-3">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
