--- a/app/views/homes/landing.html.erb
+++ b/app/views/homes/landing.html.erb
@@ -4,12 +4,19 @@
       <div class="hero">
         <div>
           <h1 class="heading-primary">
-            Elevate your fitness experience with 3E Fitness
+            Elevate how you manage your fitness experience!
           </h1>
           <p class="hero-description">
-            Streamline your fitness journey with our scheduling app, effortlessly booking personal training sessions with our esteemed team members in just a few clicks, optimizing your time and enhancing your experience.
+            Streamline your journey to a healthier you with 3E Fitness. Effortlessly book personal training sessions with our esteemed team members in just a few clicks, optimizing your time and getting you to the action.
           </p>
           <%= link_to 'Start training now!', new_user_registration_path, class: "main-nav-link nav-cta margin-right-sm" %>
+        </div>
+        <div class="hero-img-box">
+        <img
+          src="/assets/LandingPage.jpeg"
+          class="hero-img"
+          alt="Man in the gym using their phone"
+        />
         </div>
       </div>
     </section>
