--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,11 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div class="flash-messages">
-      <% if notice.present? %>
-        <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
-      <% end %>
-      <% if alert.present? %>
-        <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
-      <% end %>
-    </div>
+    <% flash.each do |key, value| %>
+      <div class="flash-messages">
+        <%= value %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
