--- a/app/views/homes/landing.html.erb
+++ b/app/views/homes/landing.html.erb
@@ -84,6 +84,7 @@
             <p class="trainer-name">Liam Smith</p>
             <ul class="trainer-certs">
               <li class="trainer-attribute">
+              # inline style should be a class 
                 <i class="fa-solid fa-certificate" style="color: #54865c"></i>
                 <span><strong>NASM</strong> certified</span>
               </li>
@@ -122,6 +123,7 @@
             </p>
           </div>
           <div class="step-img-box">
+          #use rails helper/file name should be cleaned up
             <img
               src="/assets/Schedule.JPG"
               class="step-img"
